# cmaketest

./: .gitignore  CMakeLists.txt  README.md
myapp1/src/: main.cpp
myapp2/: CMakeLists.txt
mylib1/: CMakeLists.txt
mylib1/include/: foo.h
mylib1/myapp1/: CMakeLists.txt
mylib1/myapp2/src/: main.cpp
mylib1/src/: foo.cpp  main.cpp
myqt5app/: CMakeLists.txt
myqt5app/src/: main.cpp  mainwindow.cpp
